--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,11 +1,15 @@
 version: "2"
 
 run:
-  skip-dirs:
+  exclude-dirs:
     - examples
 
-issues:
-  exclude-rules:
-    - path: _test\.go
-      linters:
-        - errcheck
+linters:
+  enable:
+    - errcheck
+
+  exclusions:
+    rules:
+      - path: _test\.go
+        linters:
+          - errcheck
